--- a/board.html
+++ b/board.html
@@ -12,14 +12,18 @@
 <body onload="render()">
     <div class="addTaskContainer">
         <h1>Board</h1>
-        <input type="search" placeholder="Find Task">
-        <!-- <button type="submit"><img src="./assets/img/Search.svg" alt="Search"></button> -->
-        <form onsubmit="formIsSubmittet(); return false">
-            <!-- <input id="titleId" type="text" required placeholder="Titel">
-            <input id="contentId" type="text" required placeholder="Beschreibung"> -->
-            <button class="ButtonBlueFilled" type="submit">Add Task <img src="./assets/img/add.svg"
-                    alt="+"></button>
-        </form>
+        <div class="addTaskContainer gap32px">
+            <div class="searchBar">
+                <input name="Search" placeholder="Find Task" rows="1"></input>
+                <img onclick="" src="./assets/img/Search.svg" alt="Search">
+            </div>
+            <form onsubmit="formIsSubmittet(); return false">
+                <!-- <input id="titleId" type="text" required placeholder="Titel">
+                <input id="contentId" type="text" required placeholder="Beschreibung"> -->
+                <button class="ButtonBlueFilled" type="submit">Add Task <img src="./assets/img/add.svg"
+                        alt="+"></button>
+            </form>
+        </div>
     </div>
     <div class="tablecontainer">
         <table>
@@ -27,7 +31,7 @@
                 <td>To do <button>+</button></td>
                 <td>In progress <button>+</button></td>
                 <td>Await feedback <button>+</button></td>
-                <td>Done <button>+</button></td>
+                <td>Done</td>
             </tr>
             <tr>
                 <td id="field1" ondrop="moveTo('field1')" ondragleave="removeHighlightField('field1')"
