--- a/board.html
+++ b/board.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="mainFond">
+<html lang="en" class="mainFond" ondragend="endTransformTask()">
 
 <head>
     <meta charset="UTF-8">
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="./style/standard.css">
 </head>
 
-<body onload="render()">
+<body onload="init()">
     <div class="addTaskContainer">
         <h1>Board</h1>
         <div class="addTaskContainer gap32px">
             <div class="searchBar">
-                <input name="Search" placeholder="Find Task" rows="1"></input>
-                <img onclick="" src="./assets/img/Search.svg" alt="Search">
+                <input id="searchInput" onkeyup="searchTask()" name="Search" placeholder="Find Task" rows="1"></input>
+                <img src="./assets/img/Search.svg" alt="Search">
             </div>
             <form onsubmit="formIsSubmittet(); return false">
                 <!-- <input id="titleId" type="text" required placeholder="Titel">
@@ -33,19 +33,14 @@
                 <td>Await feedback <button>+</button></td>
                 <td>Done</td>
             </tr>
-            <tr>
-                <td id="field1" ondrop="moveTo('field1')" ondragleave="removeHighlightField('field1')"
-                    ondragover="dragoverHandler(event), highlightField('field1')"></td>
-                <td id="field2" ondrop="moveTo('field2')" ondragleave="removeHighlightField('field2')"
-                    ondragover="dragoverHandler(event), highlightField('field2')"></td>
-                <td id="field3" ondrop="moveTo('field3')" ondragleave="removeHighlightField('field3')"
-                    ondragover="dragoverHandler(event), highlightField('field3')"></td>
-                <td id="field4" ondrop="moveTo('field4')" ondragleave="removeHighlightField('field4')"
-                    ondragover="dragoverHandler(event), highlightField('field4')"></td>
+            <tr id="fields">
+                    
             </tr>
         </table>
     </div>
+    <script src="./JS/boardTamplate.js"></script>
     <script src="./JS/board.js"></script>
+   
 </body>
 
 </html>
