--- a/contacts_fixed.html
+++ b/contacts_fixed.html
@@ -9,25 +9,19 @@
   <link rel="stylesheet" href="./style/sidebar.css" />
   <link rel="stylesheet" href="./style/header.css" />
   <link rel="stylesheet" href="./style/contacts.css" />
-  <!-- Layout-Fix CSS als letztes laden -->
-  <link rel="stylesheet" href="./style/layout-fix.css" />
 </head>
 
 <body>
   <div class="app">
-    <!-- STATISCHER HEADER -->
+    <!-- HEADER - DIREKT EINGEFÜGT -->
     <header class="header">
       <div class="header-title">Kanban Project Management Tool</div>
       <div class="header-right">
-        <div class="header-profile">
-          <div class="profile-circle">
-            <div class="profile-initials">EM</div>
-          </div>
-        </div>
+        <span class="header-profile">EM</span>
       </div>
     </header>
-    
-    <!-- STATISCHE SIDEBAR -->
+
+    <!-- SIDEBAR - DIREKT EINGEFÜGT -->
     <nav class="sidebar">
       <div class="sidebar-top">
         <img src="./assets/img/logoside.svg" alt="Join Logo" class="sidebar-logo">
@@ -52,7 +46,7 @@
       </div>
     </nav>
 
-    <!-- Main area -->
+    <!-- MAIN AREA -->
     <div class="main">
       <!-- Content layout: list panel + details -->
       <div class="content">
@@ -83,43 +77,32 @@
             <p>Select a contact to see details.</p>
           </div>
 
-          <!-- Selected contact details -->
-          <div class="details-card hidden" id="detailsCard">
+          <!-- Contact details card (wird per JS gefüllt) -->
+          <div class="details-card" id="detailsCard" style="display: none;">
             <div class="details-card-top">
-              <div class="badge-large" id="detailsBadge">AM</div>
-
-              <div class="details-name-actions">
-                <div class="details-name" id="detailsName">Anton Mayer</div>
-
+              <div class="details-profile" id="detailsProfile"></div>
+              <div class="details-name-section">
+                <h2 class="details-name" id="detailsName"></h2>
                 <div class="details-actions">
-                  <button class="link-icon" id="editBtn" type="button" aria-label="Kontakt bearbeiten">
-                    <svg width="19" height="19" viewBox="0 0 19 19" fill="none">
-                      <path d="M2 17h3l8.586-8.586-3-3L2 14v3z" stroke="currentColor" stroke-width="2" fill="none"/>
-                      <path d="m16.586 6.414-3-3L15 2l3 3-1.414 1.414z" stroke="currentColor" stroke-width="2" fill="none"/>
-                    </svg>
-                    <span>Bearbeiten</span>
+                  <button class="details-btn edit" id="editBtn">
+                    ✏️ Edit
                   </button>
-                  <button class="link-icon" id="deleteBtn" type="button" aria-label="Kontakt löschen">
-                    <svg width="19" height="19" viewBox="0 0 19 19" fill="none">
-                      <path d="M3 6h13M8 6V4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2m3 0v11a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6h10zM10 11v4M14 11v4" stroke="currentColor" stroke-width="2" fill="none"/>
-                    </svg>
-                    <span>Löschen</span>
+                  <button class="details-btn delete" id="deleteBtn">
+                    🗑️ Delete
                   </button>
                 </div>
               </div>
             </div>
-
-            <div class="details-section-title">Contact Information</div>
-
+            
             <div class="details-info">
+              <h3 class="details-section-title">Contact Information</h3>
               <div class="info-block">
                 <div class="info-label">Email</div>
-                <a class="info-link" id="detailsEmail" href="mailto:antomm@gmail.com">antomm@gmail.com</a>
+                <div class="info-value" id="detailsEmail"></div>
               </div>
-
               <div class="info-block">
                 <div class="info-label">Phone</div>
-                <div class="info-value" id="detailsPhone">+49 1111 111 11 1</div>
+                <div class="info-value" id="detailsPhone"></div>
               </div>
             </div>
           </div>
@@ -127,7 +110,6 @@
       </div>
     </div>
   </div>
-
 
   <script src="./JS/contacts.js"></script>
 </body>
