--- a/add_task.html
+++ b/add_task.html
@@ -1,27 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Dancing+Script:wght@400..700&family=Economica:ital,wght@0,400;0,700;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lobster&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Pacifico&family=Raleway:ital,wght@0,100..900;1,100..900&family=Yanone+Kaffeesatz:wght@200..700&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Join</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="/script/add_task.js"></script>
+    <script src="/assets/addTaskTemplate.js"></script>
   </head>
-  <body>
+  <body onload="init()">
     <main>
       <div id="mainContent"></div>
-      <h1>Add Task</h1>
-        <form id="taskForm">
-          <label class="addTaskLabel" for="taskName">Title:
-          <input type="text" id="taskName" name="taskName" required />
-          </label>
-          <label class="addTaskLabel" for="taskDesc">Description:
-          <input id="taskDesc" name="taskDesc" required></textarea>
-          </label>
-          <label class="addTaskLabel" for="DueDate">Due Date:
-          <input type="text" id="DueDate" name="DueDate" required />
-          </label>
-        </form>
-      </div>
     </main>
   </body>
 </html>
