--- a/contacts.html
+++ b/contacts.html
@@ -13,64 +13,7 @@
 
 <body>
   <div class="app">
-    <!-- Sidebar -->
-    <aside class="sidebar" id="sidebar">
-      <div class="sidebar-top">
-        <img class="sidebar-logo" src="./assets/img/logoside.svg" alt="Join Logo" />
-      </div>
-
-      <nav class="nav">
-        <a class="nav-item" href="./summary.html" data-page="summary">
-          <span class="nav-icon">
-            <img src="./assets/img/summary.svg" alt="Summary">
-          </span>
-          <span>Summary</span>
-        </a>
-        <a class="nav-item" href="./add_task.html" data-page="add_task">
-          <span class="nav-icon">
-            <img src="./assets/img/addtask.png" alt="Add Task">
-          </span>
-          <span>Add Task</span>
-        </a>
-        <a class="nav-item" href="./board.html" data-page="board">
-          <span class="nav-icon">
-            <img src="./assets/img/board.png" alt="Board">
-          </span>
-          <span>Board</span>
-        </a>
-        <a class="nav-item" href="./contacts.html" data-page="contacts">
-          <span class="nav-icon">
-            <img src="./assets/img/contacts.svg" alt="Contacts">
-          </span>
-          <span>Contacts</span>
-        </a>
-      </nav>
-
-      <div class="sidebar-bottom">
-        <a class="sidebar-link" href="./privacy.html">Privacy Policy</a>
-        <a class="sidebar-link" href="./legal.html">Legal notice</a>
-      </div>
-    </aside>
-
-    <!-- Header -->
-    <header class="header">
-      <div class="header-title">Kanban Project Management Tool</div>
-      
-      <div class="header-right">
-        <button class="header-help-btn" type="button" aria-label="Help">
-          <svg class="header-icon" viewBox="0 0 32 32">
-            <rect width="32" height="32" rx="16" fill="#D9D9D9"/>
-            <path d="M16 12a4 4 0 0 0-4 4h2a2 2 0 1 1 2 2v2h2v-2a4 4 0 0 0 4-4 4 4 0 0 0-4-4zm-1 10h2v2h-2v-2z" fill="#A8A8A8"/>
-          </svg>
-        </button>
-        
-        <button class="header-profile-btn" type="button" aria-label="User profile">
-          <div class="profile-circle">
-            <span class="profile-initials">SM</span>
-          </div>
-        </button>
-      </div>
-    </header>
+  
 
     <!-- Main area -->
     <div class="main">
@@ -113,17 +56,12 @@
 
                 <div class="details-actions">
                   <button class="link-icon" id="editBtn" type="button" aria-label="Kontakt bearbeiten">
-                    <svg width="19" height="19" viewBox="0 0 19 19" fill="none">
-                      <path d="M2 17h3l8.586-8.586-3-3L2 14v3z" stroke="currentColor" stroke-width="2" fill="none"/>
-                      <path d="m16.586 6.414-3-3L15 2l3 3-1.414 1.414z" stroke="currentColor" stroke-width="2" fill="none"/>
-                    </svg>
-                    <span>Bearbeiten</span>
+                    <img src="./assets/img/edit.svg" alt="Edit" width="24" height="24">
+                    <span>Edit</span>
                   </button>
                   <button class="link-icon" id="deleteBtn" type="button" aria-label="Kontakt löschen">
-                    <svg width="19" height="19" viewBox="0 0 19 19" fill="none">
-                      <path d="M3 6h13M8 6V4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2m3 0v11a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6h10zM10 11v4M14 11v4" stroke="currentColor" stroke-width="2" fill="none"/>
-                    </svg>
-                    <span>Löschen</span>
+                    <img src="./assets/img/delete.svg" alt="Delete" width="24" height="24">
+                    <span>Delete</span>
                   </button>
                 </div>
               </div>
@@ -147,6 +85,74 @@
       </div>
     </div>
   </div>
+
+<!-- EDIT/ADD CONTACT MODAL -->
+<div id="contactOverlay" class="contact-overlay d-none">
+  <div class="contact-modal">
+
+    <!-- LEFT PANEL -->
+    <div class="contact-modal-left">
+      <div class="contact-modal-brand">
+        <img src="./assets/img/logoside.svg" alt="Join" class="contact-modal-logo">
+      </div>
+
+      <div class="contact-modal-left-content">
+        <h2 id="contactModalTitle" class="contact-modal-title">Edit contact</h2>
+        <p id="contactModalSubtitle" class="contact-modal-subtitle d-none">
+          Tasks are better with a team!
+        </p>
+        <div class="contact-modal-divider"></div>
+      </div>
+    </div>
+
+    <!-- RIGHT PANEL -->
+    <div class="contact-modal-right">
+      <button id="contactModalClose" class="contact-modal-close" onclick="closeContactModal()" aria-label="Close">
+        <img src="./assets/img/Close.svg" alt="Close">
+      </button>
+
+      <div class="contact-modal-body">
+        <div class="contact-modal-avatar-wrap">
+          <div id="contactModalAvatar" class="contact-modal-avatar">
+            <span id="contactModalInitials">AM</span>
+            <img id="contactModalAvatarIcon" class="contact-modal-avatar-icon d-none" src="./assets/img/person.svg" alt="">
+          </div>
+        </div>
+
+        <form id="contactModalForm" class="contact-modal-form" novalidate>
+          <!-- Name -->
+          <div class="contact-input">
+            <input id="modalName" type="text" placeholder="Name" autocomplete="off">
+            <img class="contact-input-icon" src="./assets/img/person.svg" alt="">
+          </div>
+          <div id="modalErrName" class="modal-error"></div>
+
+          <!-- Email -->
+          <div class="contact-input">
+            <input id="modalEmail" type="text" placeholder="Email" autocomplete="off">
+            <img class="contact-input-icon" src="./assets/img/mail.svg" alt="">
+          </div>
+          <div id="modalErrEmail" class="modal-error"></div>
+
+          <!-- Phone -->
+          <div class="contact-input">
+            <input id="modalPhone" type="text" placeholder="Phone" autocomplete="off">
+            <img class="contact-input-icon" src="./assets/img/call.svg" alt="">
+          </div>
+          <div id="modalErrPhone" class="modal-error"></div>
+        </form>
+
+        <div class="contact-modal-actions">
+          <button id="contactModalDeleteBtn" type="button" class="btn-secondary-outline">Delete</button>
+          <button id="contactModalSaveBtn" type="submit" form="contactModalForm" class="btn-primary-dark">
+            <span id="contactModalSaveText">Save</span> <span class="btn-check">✓</span>
+          </button>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
 
   <script src="./JS/sidebar.js"></script>
   <script src="./JS/header.js"></script>
