taskDetail.js, taskDetail.css added, function: Open Dialog and Close Dialog added

--- a/board.html
+++ b/board.html
@@ -7,6 +7,7 @@
     <title>Board</title>
     <link rel="stylesheet" href="./style/board.css">
     <link rel="stylesheet" href="./style/standard.css">
+    <link rel="stylesheet" href="./style/taskDetail.css">
 </head>
 
 <body onload="init()">
@@ -38,8 +39,12 @@
             </tr>
         </table>
     </div>
+    <dialog id="taskDetails">
+
+    </dialog>
     <script src="./JS/boardTamplate.js"></script>
     <script src="./JS/board.js"></script>
+    <script src="./JS/taskDetail.js"></script>
    
 </body>
 
