--- a/add_task.html
+++ b/add_task.html
@@ -11,8 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Join</title>
     <link rel="stylesheet" href="style/add-Task.css" />
-    <script src="/Join/assets/templates/AddTaskTemplate.js"></script>
-    <script src="/Join/JS/addTask.js"></script>
+    <script src="/assets/templates/AddTaskTemplate.js"></script>
+    <script src="/JS/addTask.js"></script>
   </head>
   <body onload="init()">
     <main>
