Header style changes

--- a/contacts.html
+++ b/contacts.html
@@ -24,8 +24,10 @@
           <!-- Add new contact button (sticky bar) -->
           <div class="contacts-panel-header">
             <button class="ButtonBlueFilled" id="addContactBtn" type="button">
+              
               <span>Add new contact</span>
-              <span class="btn-add-icon">+</span>
+              <img src="./assets/img/person_add.svg" alt="Add" width="29.33" height="20.91">
+          
             </button>
           </div>
 
