change class to input-wrapper

--- a/login.html
+++ b/login.html
@@ -23,12 +23,12 @@
         <h1>Log in</h1>
         <form>
             <div class="login-inputs">
-                <div class="login-email-input" >
+                <div class="input-wrapper" >
                     <label for="email" class="visuallyhidden">Email</label>
                     <input id="login-email" autocomplete="username" type="email" placeholder="Email">
                     <img src="./assets/img/mail.svg" alt="Email Icon">
                 </div>
-                <div class="login-password-input">
+                <div class="input-wrapper">
                     <label for="password" class="visuallyhidden">Password</label>
                     <input id="login-password" autocomplete="current-password"type="password" placeholder="Password">
                     <img src="./assets/img/lock.svg" alt="Password Icon">
