add error message

--- a/login.html
+++ b/login.html
@@ -32,6 +32,7 @@
                     <label for="password" class="visuallyhidden">Password</label>
                     <input id="login-password" autocomplete="current-password"type="password" placeholder="Password">
                     <img src="./assets/img/lock.svg" alt="Password Icon">
+                    <span id="login-error"></span>
                 </div>
                 <div class="login-buttons">
                         <button type="submit" id="loginButton">Log in</button>
