--- a/contacts.html
+++ b/contacts.html
@@ -13,6 +13,8 @@
 
 <body>
   <div class="app">
+     <div id="sidebar-slot"></div>
+     <div id="header-slot"></div> 
   
 
     <!-- Main area -->
