--- a/board.html
+++ b/board.html
@@ -5,43 +5,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Board</title>
-    <link rel="stylesheet" href="./style/board.css">
     <link rel="stylesheet" href="./style/standard.css">
+    <link rel="stylesheet" href="./style/sidebar.css">
+    <link rel="stylesheet" href="./style/board.css">
     <link rel="stylesheet" href="./style/taskDetail.css">
 </head>
 
-<body onload="init()">
-    <section class="addTaskContainer">
-        <h1>Board</h1>
-        <div class="addTaskContainer gap32px">
-            <div class="searchBar">
-                <input id="searchInput" onkeyup="searchTask()" name="Search" placeholder="Find Task" rows="1"></input>
-                <img src="./assets/img/Search.svg" alt="Search">
+<body onload="init2()">
+    <div class="app">
+        <section class="addTaskContainer">
+            <h1>Board</h1>
+            <div class="addTaskContainer gap32px">
+                <div class="searchBar">
+                    <input id="searchInput" onkeyup="searchTask()" name="Search" placeholder="Find Task"
+                        rows="1"></input>
+                    <img src="./assets/img/Search.svg" alt="Search">
+                </div>
+                <form onsubmit="formIsSubmittet(); return false">
+                    <!-- <input id="titleId" type="text" required placeholder="Titel">
+                <input id="contentId" type="text" required placeholder="Beschreibung"> -->
+                    <button class="ButtonBlueFilled" type="submit">Add Task <img src="./assets/img/add.svg"
+                            alt="+"></button>
+                </form>
             </div>
-            <form onsubmit="formIsSubmittet(); return false">
-                <input id="titleId" type="text" required placeholder="Titel">
-                <input id="contentId" type="text" required placeholder="Beschreibung">
-                <button class="ButtonBlueFilled" type="submit">Add Task <img src="./assets/img/add.svg"
-                        alt="+"></button>
-            </form>
-        </div>
-    </section>
-    <section class="tablecontainer">
-        <table>
-            <tr class="tableCategories">
-                <td>To do <button>+</button></td>
-                <td>In progress <button>+</button></td>
-                <td>Await feedback <button>+</button></td>
-                <td>Done</td>
-            </tr>
-            <tr id="fields">
+        </section>
+        <section class="tablecontainer">
+            <table>
+                <tr class="tableCategories">
+                    <td>To do <button>+</button></td>
+                    <td>In progress <button>+</button></td>
+                    <td>Await feedback <button>+</button></td>
+                    <td>Done</td>
+                </tr>
+                <tr id="fields">
 
-            </tr>
-        </table>
-    </section>
-    <dialog id="allTaskDetails" class="allTaskDetails" onclick="closedialog('allTaskDetails')">
+                </tr>
+            </table>
+        </section>
+        <dialog id="allTaskDetails" class="allTaskDetails" onclick="closedialog('allTaskDetails')">
 
-    </dialog>
+        </dialog>
+    </div>
+    <script src="./JS/sidebar.js"></script>
     <script src="./JS/boardTamplate.js"></script>
     <script src="./JS/board.js"></script>
     <script src="./JS/taskDetail.js"></script>
