add new contact style improved

--- a/contacts.html
+++ b/contacts.html
@@ -149,7 +149,7 @@
         <div class="contact-modal-actions">
           <button id="contactModalDeleteBtn" type="button" class="btn-secondary-outline">Delete</button>
           <button id="contactModalSaveBtn" type="submit" form="contactModalForm" class="btn-primary-dark">
-            <span id="contactModalSaveText">Save</span> <span class="btn-check">✓</span>
+            <span id="contactModalSaveText">Save</span> <img src="./assets/img/check.svg" alt="" class="btn-check">
           </button>
         </div>
       </div>
