--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Join</title>
+    <link rel="stylesheet" href="./style/login.css" />
+    <link rel="stylesheet" href="./style/standard.css" />
   </head>
   <body>
-    <div id="content"></div>
+    <div id="content">
+      <div id="logo-animation">
+        <img src="/assets/icons/logo-login-start.svg" alt="logo">
+      </div>
+    </div>
   </body>
 </html>
