add contact succesfully created

--- a/contacts.html
+++ b/contacts.html
@@ -158,6 +158,13 @@
   </div>
 </div>
 
+<!-- Success Notification -->
+<div id="contactSuccessNotification" class="contact-success-notification">
+  <div class="contact-success-content">
+    Contact successfully created
+  </div>
+</div>
+
   <script src="./JS/sidebar.js"></script>
   <script src="./JS/header.js"></script>
   <script src="./JS/contacts.js"></script>
