add styles to standard.css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>    
 
 <nav class="loginNav">
-    <div class="loginNewUserContainer">
+    <div class="loginNewUserWrapper">
         <span>Not a Join user?</span>
         <button class="ButtonBlueFilled">Sign up</button>
     </div>
@@ -24,6 +24,7 @@
 <main class="loginMainContainer">
     <div class="loginCard">
         <h1>Log in</h1>
+        <div class="Separator"></div>
         <form>
             <div class="loginInputs">
                 <div class="InputWrapper" >
@@ -37,7 +38,7 @@
                     <img class="InputFieldIcon" src="./assets/img/lock.svg" alt="Password Icon">
                 </div>
                 <span id="loginError" class="InputErrorText"></span>
-                <div class="loginButtons">
+                <div class="loginButtonsWrapper">
                         <button class="ButtonBlueFilled" type="submit" id="loginButton">Log in</button>
                         <button class="ButtonWhiteBlueOutline" type="button" id="guestButton">Guest Log in</button>
                 </div>
