add button state active and focus

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         <form>
             <div class="loginInputs">
                 <div class="InputWrapper" >
-                    <label for="email" class="visuallyhidden">Email</label>
+                    <label for="loginEmail" class="visuallyhidden">Email</label>
                     <input id="loginEmail" class="InputField" autocomplete="username" type="email" placeholder="Email">
                     <img class="InputFieldIcon" src="./assets/img/mail.svg" alt="Email Icon">
                 </div>
                 <div class="InputWrapper">
-                    <label for="password" class="visuallyhidden">Password</label>
+                    <label for="loginPassword" class="visuallyhidden">Password</label>
                     <input id="loginPassword" class="InputField" autocomplete="current-password" type="password" placeholder="Password">
                     <img class="InputFieldIcon" src="./assets/img/lock.svg" alt="Password Icon">
                 </div>
