feat: Add removeContactFromTasks with CSV string support
- Implement removeContactFromTasks() function with comprehensive contact removal from tasks
- Add cleanAssignedTo() helper function supporting multiple data formats:
  * CSV strings (e.g. 'c4,c5')
  * Arrays (e.g. ['c4','c5'])
  * Object maps (e.g. {c4:true, c5:true})
- Replace old removeContactFromAllTasks() logic with enhanced version
- Ensure backward compatibility by delegating to new function

--- a/contacts.html
+++ b/contacts.html
@@ -46,9 +46,9 @@
           </div>
 
           <!-- Empty state (wenn nichts ausgewählt) -->
-          <div class="details-empty" id="detailsEmpty">
+          <!-- <div class="details-empty" id="detailsEmpty">
             <p>Select a contact to see details.</p>
-          </div>
+          </div> -->
 
           <!-- Selected contact details -->
           <div class="details-card hidden" id="detailsCard">
