refactor: Modularize contacts into separate modules
- Split monolithic contacts.js into 8 focused modules in JS/contacts/
  * contacts.config.js - Configuration and state management
  * contacts.api.js - REST API helper functions
  * contacts.firebase.js - Firebase CRUD operations
  * contacts.tasks.js - Task-related contact operations
  * contacts.validation.js - Validation and utility functions
  * contacts.ui.list.js - Contact list rendering and selection
  * contacts.ui.modal.js - Modal dialog handling
  * contacts.page.js - Page initialization and event binding
- Update contacts.html to load new modular scripts in correct order
- Remove inline onclick handler from modal close button
- Use event listeners for all UI interactions
- Namespace all code under window.ContactsApp to prevent global pollution
- Maintain backward compatibility with existing functionality

--- a/contacts.html
+++ b/contacts.html
@@ -111,7 +111,7 @@
 
     <!-- RIGHT PANEL -->
     <div class="contact-modal-right">
-      <button id="contactModalClose" class="contact-modal-close" onclick="closeContactModal()" aria-label="Close">
+      <button id="contactModalClose" class="contact-modal-close" aria-label="Close">
         <img src="./assets/img/Close.svg" alt="Close">
       </button>
 
@@ -167,6 +167,13 @@
 
   <script src="./JS/sidebar.js"></script>
   <script src="./JS/header.js"></script>
-  <script src="./JS/contacts.js"></script>
+  <script src="./JS/contacts/contacts.config.js"></script>
+  <script src="./JS/contacts/contacts.api.js"></script>
+  <script src="./JS/contacts/contacts.firebase.js"></script>
+  <script src="./JS/contacts/contacts.tasks.js"></script>
+  <script src="./JS/contacts/contacts.validation.js"></script>
+  <script src="./JS/contacts/contacts.ui.list.js"></script>
+  <script src="./JS/contacts/contacts.ui.modal.js"></script>
+  <script src="./JS/contacts/contacts.page.js"></script>
 </body>
 </html>
