refactor: Modularize contacts CSS into focused modules
- Split monolithic contacts.css (1211 lines) into 6 focused modules:
  * contacts.layout.css - Page layout and panel structure
  * contacts.list.css - Contact list, items, groups, scrollbar
  * contacts.details.css - Right-side details panel
  * contacts.modal.css - Add/Edit contact modal
  * contacts.notifications.css - Success toast notification
  * contacts.responsive.css - All media queries
- Fix contact-item sizing: restore width: 352px and box-sizing
- Fix button sizing: add box-sizing, padding, line-height to ButtonBlueFilled
- Fix modal button sizing: use min-width + auto width for flexible text
- Fix contacts-panel-header: restore full width and box-shadow properties
- Update contacts.html to load 6 modular CSS files in correct order
- Remove old monolithic contacts.css file

--- a/contacts.html
+++ b/contacts.html
@@ -8,7 +8,12 @@
   <link rel="stylesheet" href="./style/standard.css" />
   <link rel="stylesheet" href="./style/sidebar.css" />
   <link rel="stylesheet" href="./style/header.css" />
-  <link rel="stylesheet" href="./style/contacts.css" />
+  <link rel="stylesheet" href="./style/contacts/contacts.layout.css" />
+  <link rel="stylesheet" href="./style/contacts/contacts.list.css" />
+  <link rel="stylesheet" href="./style/contacts/contacts.details.css" />
+  <link rel="stylesheet" href="./style/contacts/contacts.modal.css" />
+  <link rel="stylesheet" href="./style/contacts/contacts.notifications.css" />
+  <link rel="stylesheet" href="./style/contacts/contacts.responsive.css" />
 </head>
 
 <body>
