refactor: Use global InputField system in contact modal
- Remove duplicate input styling from contacts.modal.css
  - Eliminated redundant border, padding, and focus state definitions
  - Removed custom input field styling (35 lines)
- Integrate global .InputField from standard.css
  - .contact-input now extends InputWrapper pattern
  - .contact-input .InputField applies modal-specific sizing (height: 50px, border-radius: 10px)
  - .contact-input-icon follows global InputFieldIcon positioning pattern
- Update contacts.html inputs with InputField class
  - Added class="InputField" to Name, Email, and Phone inputs
- Benefits: Consistent validation, border colors, and focus behavior across app

--- a/contacts.html
+++ b/contacts.html
@@ -131,21 +131,21 @@
         <form id="contactModalForm" class="contact-modal-form" novalidate>
           <!-- Name -->
           <div class="contact-input">
-            <input id="modalName" type="text" placeholder="Name" autocomplete="off">
+            <input id="modalName" type="text" placeholder="Name" autocomplete="off" class="InputField">
             <img class="contact-input-icon" src="./assets/img/person.svg" alt="">
           </div>
           <div id="modalErrName" class="modal-error"></div>
 
           <!-- Email -->
           <div class="contact-input">
-            <input id="modalEmail" type="text" placeholder="Email" autocomplete="off">
+            <input id="modalEmail" type="text" placeholder="Email" autocomplete="off" class="InputField">
             <img class="contact-input-icon" src="./assets/img/mail.svg" alt="">
           </div>
           <div id="modalErrEmail" class="modal-error"></div>
 
           <!-- Phone -->
           <div class="contact-input">
-            <input id="modalPhone" type="text" placeholder="Phone" autocomplete="off">
+            <input id="modalPhone" type="text" placeholder="Phone" autocomplete="off" class="InputField">
             <img class="contact-input-icon" src="./assets/img/call.svg" alt="">
           </div>
           <div id="modalErrPhone" class="modal-error"></div>
