header and sidbar added, contacts on the task added

--- a/summary.html
+++ b/summary.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SUMMARY</title>
+    <link rel="stylesheet" href="./style/standard.css" />
+    <link rel="stylesheet" href="./style/sidebar.css" />
+    <link rel="stylesheet" href="./style/header.css" />
 </head>
 <body>
-    <h1>Summary User</h1>
+     <div class="app">
+        <div id="sidebar-slot"></div>
+        <div id="header-slot"></div>
+
+        <main class="main">
+            <div id="app-canvas" class="canvas-area">
+                <h1>Summary User</h1>
+
+           </div>
+        </main>
+
+    </div>
+    
+    <script src="./JS/sidebar.js"></script>
+    <script src="./JS/header.js"></script>
 </body>
 </html>
