Sign-up page, password toggle, toast component, summary shell

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
     <link rel="stylesheet" href="./style/login.css" />
   </head>
   <body>
-    <div id="content" class="contentWrapper">
-        <footer class="loginFooter">
-        <span class="loginFooterLink">Privacy Policy</span>
-        <span class="loginFooterLink">Legal notice</span>
-        </footer>
-    </div>
+    <div id="content" class="contentWrapper"></div>
+    <footer class="loginFooter">
+      <a class="loginFooterLink" href="privacy.html">Privacy Policy</a>
+      <a class="loginFooterLink" href="legal_notice.html">Legal notice</a>
+    </footer>
     <script src="script.js"></script>
     <script src="./JS/loginHtml.js"></script>
     <script src="./JS/login.js"></script>
