--- a/summary.html
+++ b/summary.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SUMMARY</title>
+    <title>Join - Summary</title>
+    <link rel="icon" href="./assets/icons/favicon.svg" type="image/svg+xml">
+    <link rel="stylesheet" href="./style/standard.css">
+    <link rel="stylesheet" href="./style/sidebar.css">
+    <link rel="stylesheet" href="./style/header.css">
+    <link rel="stylesheet" href="./style/summary.css">
 </head>
 <body>
-    <h1>Summary User</h1>
+    <div class="app">
+        <div id="sidebar-slot"></div>
+        <div id="header-slot"></div>
+        <main class="main">
+            <div id="app-canvas" class="canvas-area">
+                <div class="summaryHeadline">
+                    <h1>Join 360</h1>
+                    <div class="summaryDivider"></div>
+                    <span class="summarySubheadline">Key Metrics at a Glance</span>
+                </div>
+            </div>
+        </main>
+    </div>
+    <script src="./JS/sidebar.js"></script>
+    <script src="./JS/header.js"></script>
 </body>
 </html>
